# early_returns

./: Cargo.toml  README.md
.github/: on_push.yaml
.github/workflows/: on_push.yaml
src/: lib.rs
