[package]
name = "early_returns"
version = "0.4.0"
edition = "2021"
description = "Macros to make early returns easier to work with in Rust"
license = "Apache-2.0"
homepage = "https://github.com/PrestonFrom/early_returns"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
